src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <description>Select the application applicable to the content/document.</description>
        <inlineHelpText>Select the application applicable to the content/document.</inlineHelpText>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>Avatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biscom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BoA Works</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EasyVista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epicenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDG (Entrust)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRS (Incident Reporting System)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KRONOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGP Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGP Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce - Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce - Compliance Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce - Corporate Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce - iServe (ESD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce - Libraries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce - NPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce - PMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Symantec Endpoint Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taleo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZL Email Archiving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Desktop Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Business Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - IT Tools</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <description>Initially configured for Redwood North, but applicable/usable throughout TMN (validated w/Kate M &amp; Adam). Applied to all Content Types (Health Care Protocols Library was the original library and used General vs the newer &quot;General TMN&quot;).</description>
        <inlineHelpText>Assign one or more Content Type.</inlineHelpText>
        <label>Content Type</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager Toolkit Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protocol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Control_Review_Date__c</fullName>
        <description>Assign the date that the content will be reviewed for compliance purposes.</description>
        <inlineHelpText>Assign the date that the content will be reviewed for compliance purposes (click in the box to use the date picker or enter a date formatted as mm/dd/yyyy).</inlineHelpText>
        <label>Control Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Control_Type__c</fullName>
        <description>Identify content that requires control to ensure appropriate governance and review. Control types include: Regulatory implications, General (SOPs), SOx, or Audit.</description>
        <inlineHelpText>This content requires control to ensure appropriate governance and review. Select at least 1 Control type from the picklist.</inlineHelpText>
        <label>Control Type</label>
        <picklist>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOx</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Control__c</fullName>
        <description>Identify content that requires control to ensure appropriate governance and review. Control types include: regulatory implications, general controls (SOPs), SOX, or audit.</description>
        <inlineHelpText>This content requires control to ensure appropriate governance and review. Select at least 1 Control type from the picklist.</inlineHelpText>
        <label>Control</label>
        <picklist>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOX</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>The governing body - not the end-user of the document</description>
        <inlineHelpText>Select the group that owns/authors the document - not the end-user.</inlineHelpText>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>CareMeridian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hastings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NeuroRestorative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality (Corporate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redwood</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Publish_To__c</fullName>
        <description>Makes content visible on the related App page. Example: Selecting Progress Notes would create a link to the document on the iServe (ESD) Persons Being Served tab.</description>
        <inlineHelpText>Makes content visible on the related App page. Example: Selecting Progress Notes would create a link to the document on the iServe (ESD) Persons Being Served tab.</inlineHelpText>
        <label>Publish To</label>
        <picklist>
            <picklistValues>
                <fullName>Contract Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progress Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Regulatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identify content that has regulatory implications to ensure appropriate governance and review.</description>
        <inlineHelpText>Select if the content has regulatory implications to ensure appropriate governance and review.</inlineHelpText>
        <label>Regulatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <description>Assign a date that the content will be reviewed for compliance purposes.</description>
        <inlineHelpText>Click in the box to access the Calendar pop-up and then choose a date that the content will be reviewed for compliance purposes.</inlineHelpText>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <recordTypes>
        <fullName>Control_Audit_Doc</fullName>
        <active>true</active>
        <description>Used by IT Governance; this type mandates content review.</description>
        <label>Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_TMN</fullName>
        <active>true</active>
        <description>Used across TMN; use for new libraries instead of &quot;SF &apos;General&apos;&quot; for more control/customization. Note: this type was fna &quot;Application Help Doc,&quot; which is no longer in use; also, renamed as the CRMIT/FCT upload all defaulted to use this &quot;A&quot; vs General.</description>
        <label>General TMN</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Systems</fullName>
        <active>true</active>
        <description>Used in IT Libraries with custom field to identify related application.</description>
        <label>IT Systems</label>
    </recordTypes>
    <validationRules>
        <fullName>Content_Application_Required</fullName>
        <active>true</active>
        <description>Content Application Required requires that content uploaded to the IT Salesforce Libraries with the IT-Systems Content Type must select an application from its list.</description>
        <errorConditionFormula>AND(ISPICKVAL( Application__c , &apos;&apos;),  RecordType.Name == &apos;Application&apos;)</errorConditionFormula>
        <errorDisplayField>Application__c</errorDisplayField>
        <errorMessage>You must select a value from the list.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Content_Control_Review_Date_Required</fullName>
        <active>true</active>
        <description>Content Control Review Date Required requires that content uploaded to Salesforce Libraries with the Control Content Type must select a a date to review the content to ensure compliance.</description>
        <errorConditionFormula>OR(AND(RecordType.Name == &apos;Control&apos;, ISBLANK(Control_Review_Date__c)), AND(NOT(ISBLANK(Control_Review_Date__c)),  RecordType.Name == &apos;Control&apos;,  Control_Review_Date__c &lt;= TODAY()))</errorConditionFormula>
        <errorDisplayField>Control_Review_Date__c</errorDisplayField>
        <errorMessage>Populate the date (use the date picker or enter a date formatted as mm/dd/yyyy) that this content needs to be reviewed for control requirements.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Content_Control_Type_Required</fullName>
        <active>true</active>
        <description>Content Control Required requires that content uploaded to Salesforce Libraries with the Control Content Type must select a control type from the picklist.</description>
        <errorConditionFormula>AND(ISBLANK(Control_Type__c),  RecordType.Name == &apos;Control&apos;)</errorConditionFormula>
        <errorDisplayField>Control_Type__c</errorDisplayField>
        <errorMessage>You must select one or more values from the list.</errorMessage>
    </validationRules>
</CustomObject>